[package]
name = "rebench-tabler"
version = "0.1.0"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "A statistical analysis tool of benchmarking datasets produced from ReBench"
edition = "2021"

[dependencies]
colored = "2.0.0"
prettytable-rs = "0.10.0"
clap = { version = "4.4.8", features = ["derive"] }
anyhow = "1.0.75"
statrs = "0.16.0"

[features]
