[package]
name = "rebench-tabler"
version = "0.1.0"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "A statistical analysis tool of benchmarking datasets produced from ReBench"
edition = "2021"

[dependencies]
colored = "3.0.0"
clap = { version = "4.5.26", features = ["derive"] }
anyhow = "1.0.95"
statrs = "0.18.0"
tableau = "0.1.0"

[features]
